<?xml version="1.0"?>
<package format="2">
  <name>ament_pkg</name>
  <version>0.1.0</version>
  <description>ROSDep issue test</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>opw_kinematics</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
