<?xml version="1.0"?>
<package format="2">
  <name>cmake_pkg</name>
  <version>0.1.0</version>
  <description>ROSDep issue test</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <depend>opw_kinematics</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
